--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.18.6",
-    "@babel/plugin-transform-private-methods": "^7.18.6",
-    "@babel/plugin-transform-numeric-separator": "^7.18.6",
-    "@babel/plugin-transform-class-properties": "^7.18.6",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-transform-private-property-in-object": "^7.21.0",
+    "@babel/plugin-transform-private-methods": "^7.21.0",
+    "@babel/plugin-transform-numeric-separator": "^7.21.0",
+    "@babel/plugin-transform-class-properties": "^7.21.0",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.21.0",
     "@babel/plugin-transform-optional-chaining": "^7.21.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
@@ -20,7 +20,7 @@
     "react-modal": "^3.16.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.77.6",
     "sitemap": "^8.0.0",
     "web-vitals": "^4.2.0",
